[package]
name = "tyson"
version = "0.1.1"
authors = ["Roman Right <roman-right@protonmail.com>"]
edition = "2021"
description = "Typed Simple Object Notation"
readme = "README.md"
license = "Apache-2.0"
exclude = [
    "assets/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tyson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
pest = "2.1.3"
pest_derive = "2.1.0"
custom_error = "1.9.2"
