[package]
name = "tyson"
version = "0.1.5"
authors = ["Roman Right <roman-right@protonmail.com>"]
edition = "2021"
description = "Typed Simple Object Notation"
readme = "README.md"
license = "Apache-2.0"
exclude = [
    "assets/*",
]

[lib]
name = "tyson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
pest = "2.1.3"
pest_derive = "2.1.0"
custom_error = "1.9.2"
